--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -264,3 +264,142 @@ li {
     font-weight: 500;
     font-size: 2rem;
 }
+ad-size {
+    font-size: 4rem;
+    font-weight: 100;
+    color: #F4623A;
+}
+
+.mg-left-gem {
+    margin-left: 9.5rem;
+}
+
+.p-saturdy {
+    margin-left: -2.5rem;
+    font-size: 25px;
+}
+
+.p-saturdy-child {
+    text-align: center;
+    margin-left: -5em;
+    padding-top: 0.5rem;
+    width: 73%;
+    font-size: 20px;
+    color: #a1a1a1;
+}
+
+.div-display-inline {
+    display: inline-block;
+}
+
+.pad-size2 {
+    font-size: 4rem;
+    margin-top: -10vh;
+    color: #F4623A;
+}
+
+.p-uptodate {
+    margin-left: -1.5rem;
+    font-size: 25px;
+    font-weight: 100;
+}
+
+.p-readytopublish {
+    margin-left: -3rem !important;
+}
+
+.p-uptodate-child {
+    text-align: center;
+    margin-left: -6rem;
+    padding-top: 0.5rem;
+    width: 73%;
+    font-size: 20px;
+    font-weight: 100;
+    color: #a1a1a1;
+}
+
+.img-fluid {
+    width: 33.33%;
+}
+
+#portfolio>ul>li>a:hover {
+    transition: opacity 0.25s ease;
+    color: rgba(244, 98, 58, 0.9);
+}
+
+.li-wrap {
+    margin-left: -4.5px;
+}
+
+.ul-mgt {
+    margin-top: -0.3rem;
+}
+
+
+.p-letsgotouch {
+    margin-left: 41rem;
+    color: black;
+    font-weight: 500;
+    font-size: 2rem;
+}
+
+.div-padding-top {
+    padding-top: 5rem;
+
+}
+
+.p3-main-color {
+    background-color: #a1a1a1;
+}
+
+
+.form {
+    padding: 8rem 0;
+    height: 57vh;
+    text-align: center;
+}
+
+.formpagefirstword {
+    color:white;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 600;
+    opacity: 1;
+}
+
+.form-control {
+    display: block;
+    width: 25%;
+    margin-left: 600px;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.textheightbox {
+    max-height: 150px;
+}
+
+.buttonsubmit {
+    background-color: #f4623a;
+    border: none;
+    color: white;
+    padding: 15px 150px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    font-size: 15px;
+    margin: 50px 2px;
+    margin-left: 623px;
+    margin-bottom: 50px;
+    cursor: pointer;
+    border-radius: 30px;
+}
